[gd_scene load_steps=9 format=3 uid="uid://caytrova6x1u1"]

[ext_resource type="PackedScene" uid="uid://n7fng75ly2c0" path="res://minigames/miniGame.tscn" id="1_gosjj"]
[ext_resource type="Texture2D" uid="uid://cosv04s23jge0" path="res://graphics/home_slit.png" id="2_a4ksh"]
[ext_resource type="Script" path="res://minigames/Cooking/cookingMiniGame.gd" id="2_s41vd"]
[ext_resource type="PackedScene" uid="uid://doc4xl1jgccot" path="res://apartments/floor.tscn" id="3_jr8x0"]
[ext_resource type="PackedScene" uid="uid://78fo4mrxnc1b" path="res://minigames/Cooking/platform.tscn" id="4_3e75d"]
[ext_resource type="FontVariation" path="res://fonts/default_font.tres" id="5_qwrwi"]
[ext_resource type="Texture2D" uid="uid://co7urt4qjdw3d" path="res://graphics/pan.png" id="7_ol5yu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11b5o"]
size = Vector2(20.9273, 20)

[node name="minigame" instance=ExtResource("1_gosjj")]
script = ExtResource("2_s41vd")
action = 1
action_type = 1

[node name="Timer1" type="Timer" parent="." index="0"]
autostart = true

[node name="TextureRect" type="TextureRect" parent="." index="1"]
texture_filter = 1
offset_left = -1659.0
offset_top = -315.0
offset_right = -1291.0
offset_bottom = -251.0
scale = Vector2(15, 15)
texture = ExtResource("2_a4ksh")

[node name="Camera2D" type="Camera2D" parent="." index="2"]
position = Vector2(577, 370)
scale = Vector2(1.29218, 0.958194)

[node name="platform" parent="." index="3" instance=ExtResource("4_3e75d")]
modulate = Color(0.717647, 0.854902, 0.968627, 1)
position = Vector2(576, 522)
scale = Vector2(2.5, 2.5)

[node name="Area2D" type="Area2D" parent="." index="4"]
position = Vector2(0, 35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2(575.5, 656)
scale = Vector2(55, 2)
shape = SubResource("RectangleShape2D_11b5o")

[node name="Floor" parent="." index="5" instance=ExtResource("3_jr8x0")]
position = Vector2(-65, 341)
scale = Vector2(1, 5.24)

[node name="Floor2" parent="." index="6" instance=ExtResource("3_jr8x0")]
position = Vector2(1217, 341)
scale = Vector2(1, 5.24)

[node name="Label" type="Label" parent="." index="7"]
offset_left = 478.0
offset_top = 74.0
offset_right = 696.0
offset_bottom = 114.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_qwrwi")
theme_override_font_sizes/font_size = 20
text = "счёт:"
horizontal_alignment = 1
uppercase = true

[node name="Timer" type="Timer" parent="." index="8"]
wait_time = 40.0
one_shot = true
autostart = true

[node name="Pan" type="Sprite2D" parent="." index="9"]
texture_filter = 1
position = Vector2(576, 507)
scale = Vector2(38.0971, 18.5115)
texture = ExtResource("7_ol5yu")

[connection signal="timeout" from="Timer1" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer1_timeout"]
